--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ The Blue Bar will be on your right just before the beach. </p>
             <section id="footertext" class="row content">
                 <p>Title image and site contents &copy; 2014 Harry Bragg <br />
                 All other images &copy; their respective owners</p>
-                <p>Hosting by <a href="github.io">github.com</a></p>
+                <p>Hosting by <a href="http://github.io">github.io</a></p>
             </section>
         </section>
     
